@@ -9,6 +9,9 @@ Note: This file contains only changes in the 'default' branch.
   - Fixed a minor bug in the tolerance inference code that wouldn't accept a
     posting with a missing number only, e.g. Assets:Checking  USD @ 1.32 CAD.
 
+  - Added a "--no-colon" option to both bean-web and bean-bake in order to
+    support Windows filesystems which do not allow colons in filenames.
+
 
 2017-06-22
 
